cabal-version:      3.0
name:               js-th-repro
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Samuel Evans-Powell
maintainer:         mail@sevanspowell.net
-- copyright:
category:           Repro
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.19.1.0
                    , uri-bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
